objects/EUR_CRM_Image_Level__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Affiliate_Country__c</fullName>
        <formula>EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Affiliate_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>EUR_CRM_Image_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                    <default>true</default>
                    <label>Mainstream</label>
                </value>
                <value>
                    <fullName>Mainstream Quality</fullName>
                </value>
                <value>
                    <fullName>Mainstream Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Image Level (EU)</label>
    <listViews>
        <fullName>ALL_AO_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_AO_Image_Level</value>
        </filters>
        <label>ALL AO Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_FI_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_FI_Image_Level</value>
        </filters>
        <label>ALL FI Image Levels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_NG_Image_Levels</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_NG_Image_Level</value>
        </filters>
        <label>ALL NG Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_PT_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_PRT_ImageLevel</value>
        </filters>
        <label>ALL PT Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_RU_Image_Level</value>
        </filters>
        <label>All RU</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_RU</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Image_Level_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate_Country__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_BG_Image_Level</value>
        </filters>
        <label>EUR BG All Image Level View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_CH_Image_Level</value>
        </filters>
        <label>ALL CH Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_MA_Image_Level</value>
        </filters>
        <label>ALL MA Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Image_Level_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate_Country__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_PT_Image_Level</value>
        </filters>
        <label>EUR PT All Image Level View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>All DK Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Image_Level__c.EUR_ZA_Image_Level</value>
        </filters>
        <label>ALL ZA Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Image Level No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Level (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Image_Level</fullName>
        <active>true</active>
        <label>EUR AO Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Image_Level</fullName>
        <active>true</active>
        <label>AT Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Image_Level</fullName>
        <active>true</active>
        <label>EUR BG Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Image_Level</fullName>
        <active>true</active>
        <label>EUR CH Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Image_Level</fullName>
        <active>true</active>
        <label>DE Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Image_Level</fullName>
        <active>true</active>
        <description>Record Type for DK Image Level</description>
        <label>EUR DK Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Image_Level</fullName>
        <active>true</active>
        <label>EE Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Image_Level</fullName>
        <active>true</active>
        <label>EUR FI Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Image_Level</fullName>
        <active>true</active>
        <label>GB Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Image_Level</fullName>
        <active>true</active>
        <label>EUR KE Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Image_Level</fullName>
        <active>true</active>
        <label>LT Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Image_Level</fullName>
        <active>true</active>
        <label>LV Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Image_Level</fullName>
        <active>true</active>
        <label>EUR MA Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Image_Level</fullName>
        <active>true</active>
        <label>EUR NG Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_ImageLevel</fullName>
        <active>true</active>
        <label>EUR_PRT_ImageLevel</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Image_Level</fullName>
        <active>true</active>
        <label>EUR PT Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Image_Level</fullName>
        <active>true</active>
        <label>EUR RU Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Image_Level</fullName>
        <active>true</active>
        <label>EUR ZA Image Level</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>